imp: Align all images correctly

--- a/src/stylesheets/components/images.css
+++ b/src/stylesheets/components/images.css
@@ -3,8 +3,6 @@
 
 img {
     max-width: 100%;
-}
 
-a > img {
     vertical-align: middle;
 }
